<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".Contact">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:fontFamily="@font/rainyhearts"
        android:textSize="35sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yoursubject"
        android:fontFamily="@font/rainyhearts"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <EditText
        android:id="@+id/edit_text_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sujet"
        android:fontFamily="@font/rainyhearts"
        android:inputType="textEmailSubject"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/envoyezmessage"
        android:fontFamily="@font/rainyhearts"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message1"
        android:fontFamily="@font/rainyhearts"
        android:lines="10"
        android:gravity="start|top"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rainyhearts"
        android:text="@string/send"/>

</LinearLayout>